<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/chat_text"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_conv"
        android:layout_marginTop="100dp"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/start_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_btn"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_conv"
        android:layout_marginTop="30dp"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/show_conversation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_conversion"/>

</LinearLayout>
